    * "max map id" [James]
    * "get slice lookup name" [Ralph]
    * "create global npc", "global npc reference", "get npc pool" [James]
    * Commands that now accept an optional "pool" argument:
      "alter npc", "npc reference", "npc copy count", "change npc id",
      "create npc", "read npc" [James]
    * "gracefully dismount vehicle" [James]
    * "read foemap" [Ralph]

  *** Changes
    * NPCpush:vertical and NPCpush:horizontal script constants were swapped with
      with each other! They've been swapped the right way. This fix only takes
      effect when you reimport your scripts.
    * MP~/Focus and Hits stats are no longer limited to 100 and 20 in the editors
    * Joystick buttons 2 and 3 are no longer mapped to Use/Cancel (like buttons 0
      and 1), so you can use them for other purposes
    * The slice editor now shows the root slice of a collection by default
    * "trim string" now trims tabs and newlines too

  *** Bugfixes
    * "set opacity" (with opacity < 100%) didn't always turn on blending
      [Ralph]
    * Bug #1118 In turn-based battles, non-blocking attacks delayed by X
      attacks could delay by up to X turns. You have to turn off the "Non-turn
      attack delays can also cause turn delays" back-compatibility bit to get
      this bugfix [Ralph]
    * Experience required to level is no longer shown in the Status screen
      for heroes that reached max level. If all heroes are at max level,
      battles no longer tell that you gained experience [Ralph]
    * Damage and level caps changes didn't update in saved games. This fix
      only affects new saves, old ones still remember the old caps [Ralph]
    * Wrong victory animation when battle ends while hero is walking [Ralph]
    * In the slice editor, Ctrl+Up/Down and Shift+Up/Down made the cursor move
      two places [Ralph]
    * Sprites imported from PNGs had the last palette color set to black [Ralph]